 cnp-pci-dss-1.3.3-ingress-y23qupk.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-ingress-477c8b6
  namespace: kube-system
spec:
  description: "This policy will allow the inbound connection"
  endpointSelector:
    matchLabels:
      pod-template-generation: 1
      controller-revision-hash: 56fd47777c
      k8s-app: gcp-compute-persistent-disk-csi-driver
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16  #change with your id address
